initial files added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <div class="logo">PlazmaDigital</div>
             <nav>
                 <ul>
-                    <li>Contacts</li>
-                    <li>Category</li>
-                    <li>Login</li>
+                    <a href="https://www.plazmadigital.com">Contacts</a>
                 </ul>
             </nav>
         </div>
