--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content-fit">
             <div class="title" data-before="WEBSITEDESIGN">3D ANIMATION</div>
         </div>
-        <img src="assets/flower.png" class="decorate" alt="flower-img" style="width: 50vw;top:38%; bottom: 0; right: 0;">
+        <img src="assets/flower.png" class="decorate flower" alt="flower-img">
         <!-- <img src="assets/leaf.png" class="decorate" alt="leaf-img" style="width: 30vw; bottom: 0; left: 0;"> -->
     </div>
     <div class="section" id="intro">
@@ -56,7 +56,7 @@
                     Corrupti maiores velit consequuntur cupiditate reiciendis similique provident repudiandae.</p>
             </div>
         </div>
-        <img src="assets/leaf1.png" class="decorate" alt="" style="width: 70vw;top:55%; bottom: 0; right: 0; z-index: 101;">
+        <img src="assets/leaf1.png" class="leaf" alt="">
     </div>
     <div class="section" id="contact">
         <div class="content-fit">
