--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>3D Animated Demo | Website</title>
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="src/styles/fonts.css">
 </head>
 
 <body>
+    <div id="loader">
+        <img src="loader.gif" alt="Loading...">
+      </div>
     <header>
         <div class="content-fit">
             <div class="logo">PlazmaDigital</div>
